--- a/index.html
+++ b/index.html
@@ -610,13 +610,13 @@ justify-content: center;
                 <h3>Showcase</h3>
                 <div class="scrollable">
                     <div class="showcase1">
-                    <span style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/showcase1.1.jpg);"></span>
+                        <img src="https://peteroper.github.io/portfolio/assets/imgs/showcase1.1.jpg" />
                     <div>
                         <h3>Pulse Football</h3>
                         <p>An unique and in depth app for true football fans who need more than just the news.</p>
                         <p>One stop, football at your finger tips. Provided by algorithm not outlet.</p>
                     </div>
-                    <span style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/showcase1.2.jpg);"></span>
+                    <img src="https://peteroper.github.io/portfolio/assets/imgs/showcase1.2.jpg" />
                     </div>
                 </div>
         </div>
