--- a/index.html
+++ b/index.html
@@ -129,6 +129,7 @@ color: #346672;
 body{
 color: #252D34;
 }
+.showcase1,
 #contact,
 .header{
  color: #FFF;
@@ -164,6 +165,9 @@ background-color: #E3E9F0;
 }
 #contact{
 background-color: #3F464C;
+}
+.showcase1{
+background-color: #000;
 }
 .showcase1 div{
 background: linear-gradient(90deg, #21134E 0%, #000 100%);
@@ -358,6 +362,7 @@ position: relative;
 }
 #showcase .scrollable > div{
 height: 100%;
+padding-right: 40px;
 display: flex;
 position: absolute;
 top: 0;
@@ -372,6 +377,7 @@ background-size: auto 100%;
 padding-left: 90%;
 }
 .showcase1 div{
+width: 440px;
 padding: 40px;
 }
 /*/////////////////////////////////////////////////////////////*/
