--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@ h3{ font-size: 2.4em; letter-spacing: -1.12px; }
 h4{ font-size: 2em; font-family: Merriweather; letter-spacing: -0.36px; }
 p.l{ font-size: 2.2em; line-height: 140%; letter-spacing: -0.48px; }
 p{ font-size: 1.8em; }
-.posts p{ font-size: 1.4em; line-height: 140%; letter-spacing: -0.28px; }
+#showcase p, .posts p{ font-size: 1.4em; line-height: 140%; letter-spacing: -0.28px; }
 p.l span{
 font-size: 1em;
 }
@@ -140,6 +140,7 @@ color: rgba(0, 0, 0, 0.14);
 p{
 opacity: 0.8;
 }
+#showcase p,
 #posts p{
 opacity: 0.6;
 }
@@ -357,7 +358,6 @@ overflow-x: auto;
 overflow-y: hidden;
 -webkit-overflow-scrolling: touch;
 overflow: -moz-scrollbars-horizontal;
-white-space: nowrap;
 position: relative;
 }
 #showcase .scrollable > div{
@@ -377,8 +377,10 @@ background-size: auto 100%;
 padding-left: 90%;
 }
 .showcase1 div{
-width: 440px;
 padding: 40px;
+}
+.showcase div p{
+width: 440px;
 }
 /*/////////////////////////////////////////////////////////////*/
 /* CONTACT */
