--- a/index.html
+++ b/index.html
@@ -112,6 +112,7 @@ font-size: 1em;
 h3 a{
 font-size: 0.68em;
 padding-left: 12px;
+letter-spacing: 0;
 display: inline-block;
 font-weight: normal;
 text-decoration: none;
