--- a/index.html
+++ b/index.html
@@ -378,9 +378,9 @@ background-size: auto 100%;
 padding-left: 90%;
 }
 .showcase1 div{
-padding: 40px;
+padding: 40px 40px 40px 0;
 }
-.showcase div p{
+.showcase1 div p{
 width: 440px;
 }
 /*/////////////////////////////////////////////////////////////*/
