--- a/index.html
+++ b/index.html
@@ -621,9 +621,10 @@ justify-content: center;
                     <div class="showcase1">
                         <img src="https://peteroper.github.io/portfolio/assets/imgs/showcase1.1.jpg" />
                     <div>
-                        <h3>Pulse Football</h3>
-                        <p>An unique and in depth app for true football fans who need more than just the news.</p>
-                        <p>One stop, football at your finger tips. Provided by algorithm not outlet.</p>
+                        <h3>Football at your finger tips</h3>
+                        <p class="l">Pulse Football is a one stop indepth app for football fans who need more than just the news.</p>
+                        <p>Many football fans obsess over the tiniest piece of information. However finding this information involves traversing numerous platforms and media types to extract the truth.</p>
+                        <p>With the onset of AI various tasks and aggregations can be performed to optimise and present information simply and in one location. Allowing the pulse football user to tailor what information they require.</p>
                     </div>
                     <img src="https://peteroper.github.io/portfolio/assets/imgs/showcase1.2.jpg" />
                     </div>
