--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@ h3{ font-size: 2.4em; letter-spacing: -1.12px; }
 h4{ font-size: 2em; font-family: Merriweather; letter-spacing: -0.36px; }
 p.l{ font-size: 2.2em; line-height: 140%; letter-spacing: -0.48px; }
 #showcase nav a.selected, p{ font-size: 1.8em; }
-#showcase nav a, #showcase p, .posts p{ font-size: 1.4em; line-height: 140%; letter-spacing: -0.28px; }
+p, .posts p{ font-size: 1.4em; line-height: 140%; letter-spacing: -0.28px; }
 p.l span{
 font-size: 1em;
 }
@@ -392,6 +392,7 @@ padding: 40px 40px 40px 0;
 }
 .showcase1 div p{
 width: 440px;
+margin-bottom: 12px;
 }
 /*/////////////////////////////////////////////////////////////*/
 /* CONTACT */
