--- a/index.html
+++ b/index.html
@@ -359,12 +359,14 @@ background-size: 100% auto;
 /* SHOWCASE */
 /*/////////////////////////////////////////////////////////////*/
 #showcase nav{
+margin: 0 0 16px 0;
 display: flex;
-gap: 12px;
+gap: 8px;
 }
 #showcase nav a{
 line-height: 48px;
 padding: 0 16px; 
+text-decoration: none;
 }
 /*/////////////////////////////////////////////////////////////*/
 #showcase .scrollable{
