--- a/index.html
+++ b/index.html
@@ -157,6 +157,7 @@ background-repeat: no-repeat;
 background-size: 100% auto;
 background-position: 50%;
 }
+#showcase nav a.selected,
 #contact .img,
 body{
 background-color: #FFF;
@@ -194,6 +195,9 @@ background-position: 0 0;
 }
 #contact .img{
 border: 4px #FFF solid;
+}
+#showcase nav a.selected{
+border: 1px solid #E3E9F0;
 }
 /*/////////////////////////////////////////////////////////////*/
 /* BOX SHADOWS */
@@ -367,6 +371,10 @@ gap: 8px;
 line-height: 48px;
 padding: 0 16px; 
 text-decoration: none;
+}
+#showcase nav a.selected{
+font-weight: bold;
+border-width: 1px;
 }
 /*/////////////////////////////////////////////////////////////*/
 #showcase .scrollable{
