--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@ h3{ font-size: 2.4em; letter-spacing: -1.12px; }
 h4{ font-size: 2em; font-family: Merriweather; letter-spacing: -0.36px; }
 p.l{ font-size: 2.2em; line-height: 140%; letter-spacing: -0.48px; }
 #showcase nav a.selected, p{ font-size: 1.8em; }
-p, .posts p{ font-size: 1.4em; line-height: 140%; letter-spacing: -0.28px; }
+#showcase nav a, p, .posts p{ font-size: 1.4em; line-height: 140%; letter-spacing: -0.28px; }
 p.l span{
 font-size: 1em;
 }
