--- a/index.html
+++ b/index.html
@@ -544,6 +544,9 @@ padding-bottom: 4px;
 #showcase .scrollable{
 height: 424px!important;
 }
+.showcase1 div p{
+width: 280px;
+}
 /*/////////////////////////////////////////////////////////////*/
 #contact > div{
 background-size: 100% auto;
@@ -639,8 +642,8 @@ justify-content: center;
         <div id="showcase" >
                 <h3>Showcase</h3>
                 <nav>
-                    <a href="#">Pulse Football</a>
-                    <a href="#">Japanesey</a>
+                    <a href="#" class="selected">Pulse Football</a>
+                    <!--a href="#">Japanesey</a-->
                     <a href="#">Adventure Sports</a>
                     <a href="#">Kokonotori Navi</a>
                 </nav>
