--- a/index.html
+++ b/index.html
@@ -547,6 +547,13 @@ height: 424px!important;
 .showcase1 div p{
 width: 280px;
 }
+#showcase nav{
+gap: 8px;
+}
+#showcase nav a{
+line-height: 36px;
+padding: 0 12px; 
+}
 /*/////////////////////////////////////////////////////////////*/
 #contact > div{
 background-size: 100% auto;
