--- a/index.html
+++ b/index.html
@@ -581,7 +581,7 @@ justify-content: center;
     <span class="side-graphic" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/side-graphic.png);" ></span>
         <!-- intro -->
         <div id="intro">
-            <p class="l b"><span>Hi I’m Peter, a Product designer with more than 15 years professional experience.</span> I have been creating digital products since the very early days of the internets transition into visual design.</p>
+            <p class="l b"><span>Hi I’m Pete, a British Product Designer based in Tokyo with a back pocket full of experience.</span> I have been creating digital products since the very early days of the internets transition into visual design.</p>
             <p>For the last 3 years I have been furthering my skills as a UX Designer at Asurion Japan, a US multinational insurance and tech-support provider.</p>
         </div>
         <!-- intro ends -->
