--- a/index.html
+++ b/index.html
@@ -478,6 +478,9 @@ background-repeat: no-repeat;
 padding-bottom: 12px;
 border-bottom: 1px solid rgba(0, 0, 0, 0.14);
 }
+#posts .post > div:last-of-type{
+border: 0;
+}
 /*/////////////////////////////////////////////////////////////*/
 }
 /*/////////////////////////////////////////////////////////////*/
