--- a/index.html
+++ b/index.html
@@ -481,6 +481,10 @@ border-bottom: 1px solid rgba(0, 0, 0, 0.14);
 #posts .post:last-of-type > div{
 border: 0;
 }
+#posts .post .img,
+#posts .post img{
+background-size: 100% auto;
+}
 /*/////////////////////////////////////////////////////////////*/
 }
 /*/////////////////////////////////////////////////////////////*/
