--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@ h3{ font-size: 2.4em; letter-spacing: -1.12px; }
 #contact h3{ font-size: 3.2em; }
 h4{ font-size: 2em; font-family: Merriweather; letter-spacing: -0.36px; }
 p.l{ font-size: 2.2em; line-height: 140%; letter-spacing: -0.48px; }
-p{ font-size: 1.8em; }
+p.m{ font-size: 1.8em; }
 #showcase nav a, p, .posts p{ font-size: 1.4em; line-height: 140%; letter-spacing: -0.28px; }
 p.l span{
 font-size: 1em;
@@ -373,7 +373,6 @@ padding: 0 16px;
 text-decoration: none;
 }
 #showcase nav a.selected{
-font-weight: bold;
 border-width: 1px;
 }
 /*/////////////////////////////////////////////////////////////*/
@@ -589,7 +588,7 @@ justify-content: center;
         <!-- intro -->
         <div id="intro">
             <p class="l b"><span>Hi I’m Pete, a British Product Designer based in Tokyo with a back pocket brimming with experience.</span> I have created digital products since the very early days of the internets transition into visual design.</p>
-            <p>For the last 3 years I have been furthering my skills as a UX Designer at Asurion Japan, a US multinational insurance and tech-support provider.</p>
+            <p class="m">For the last 3 years I have been furthering my skills as a UX Designer at Asurion Japan, a US multinational insurance and tech-support provider.</p>
         </div>
         <!-- intro ends -->
          
