--- a/index.html
+++ b/index.html
@@ -566,6 +566,9 @@ height: 424px!important;
 .showcase1 div p{
 width: 280px;
 }
+.showcase1 img:first-of-type{
+    margin-left: -150px;
+}
 #showcase nav{
 gap: 8px;
 }
