--- a/index.html
+++ b/index.html
@@ -627,8 +627,10 @@ justify-content: center;
                     <span class="img" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/post-img.png);" ></span>
                     <div class="contents">
                         <div>
-                            <h4>Automating a Screenflow</h4>
-                            <p>With a figma screen repository creates a scalable system</p>
+                            <h4>DesignOps isn't just Systems</h4>
+                            <p>Design ops lays the foundations for a strong design team.</p>
+                            <!--h4>Automating a Screenflow</h4>
+                            <p>With a figma screen repository creates a scalable system</p-->
                         </div>
                         <span class="icn material-icons">chevron_right</span>
                     </div>   
