--- a/index.html
+++ b/index.html
@@ -515,9 +515,13 @@ display: none;
 }
 .mobile-only{
 text-align: center;
-line-height: 32px;
+line-height: 48px;
 background-color: #2883BA;
 color: #FFF;
+position: absolute;
+top: 16px;
+left: 0;
+right: 0;
 }
 /*/////////////////////////////////////////////////////////////*/
 .content{
