--- a/index.html
+++ b/index.html
@@ -105,7 +105,8 @@ h3{ font-size: 2.4em; letter-spacing: -1.12px; }
 h4{ font-size: 2em; font-family: Merriweather; letter-spacing: -0.36px; }
 p.l{ font-size: 2.2em; line-height: 140%; letter-spacing: -0.48px; }
 p.m{ font-size: 1.8em; }
-#showcase nav a, p, .posts p{ font-size: 1.4em; line-height: 140%; letter-spacing: -0.28px; }
+p{ font-size: 1.6em; }
+#showcase nav a, .posts p{ font-size: 1.4em; line-height: 140%; letter-spacing: -0.28px; }
 p.l span{
 font-size: 1em;
 }
