--- a/index.html
+++ b/index.html
@@ -698,7 +698,7 @@ justify-content: center;
                     <img src="https://peteroper.github.io/portfolio/assets/imgs/showcase1.2.jpg" />
                     </div>
                 </div>
-                <p class="web-only">My day to day work is non disclosure therefore I hope to showcase my visual design ability with some rapid ideation projects. Design processes and how I work professionally can be shared within my casestudy slide deck.</p>
+                <p class="web-only" style="padding-top: 12px;">My day to day work is non disclosure therefore I hope to showcase my visual design ability with some rapid ideation projects. Design processes and how I work professionally are shared within my casestudy slide deck.</p>
         </div>
         <!-- showcase ends -->
 </div>  
