--- a/index.html
+++ b/index.html
@@ -696,6 +696,7 @@ justify-content: center;
                         <p>With the onset of AI various tasks and aggregations can be performed to optimise and present information simply and in one location. Allowing the pulse football user to tailor what information they require.</p>
                     </div>
                     <img src="https://peteroper.github.io/portfolio/assets/imgs/showcase1.2.jpg" />
+                    <img src="https://peteroper.github.io/portfolio/assets/imgs/showcase1.3.jpg" />
                     </div>
                 </div>
                 <p class="web-only" style="padding-top: 12px;">My day to day work is non disclosure therefore I hope to showcase my visual design ability with some rapid ideation projects. Design processes and how I work professionally are shared within my casestudy slide deck.</p>
