--- a/index.html
+++ b/index.html
@@ -180,6 +180,9 @@ background-color: #000;
 .showcase1 div{
 background: linear-gradient(90deg, #21134E 0%, #000 100%);
 }
+.showcase1 div.hypothesis{
+background-color: #000;
+}
 .header{
 background-color: #346672;
 background-image: url(https://peteroper.github.io/portfolio/assets/imgs/header.png);
@@ -696,6 +699,9 @@ justify-content: center;
                         <p>With the onset of AI various tasks and aggregations can be performed to optimise and present information simply and in one location. Allowing the pulse football user to tailor what information they require.</p>
                     </div>
                     <img src="https://peteroper.github.io/portfolio/assets/imgs/showcase1.2.jpg" />
+                    <div class="hypothesis">
+                        <p class="l">text goes here</p>
+                    </div>
                     <img src="https://peteroper.github.io/portfolio/assets/imgs/showcase1.3.jpg" />
                     </div>
                 </div>
