--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@ right: 0;
 }
 /*/////////////////////////////////////////////////////////////*/
 .showcase1 div{
-padding: 40px 40px 40px 0;
+padding: 40px;
 }
 .showcase1 div p{
 width: 440px;
