--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@ color: #346672;
 body{
 color: #252D34;
 }
-.showcase1,
+#showcase1,
 #contact,
 .header{
  color: #FFF;
@@ -174,13 +174,13 @@ background-color: #E3E9F0;
 #contact{
 background-color: #3F464C;
 }
-.showcase1{
+#showcase1{
 background-color: #000;
 }
-.showcase1 div{
+#showcase1 div{
 background: linear-gradient(90deg, #21134E 0%, #000 100%);
 }
-.showcase1 div.hypothesis{
+#showcase1 div.hypothesis{
 background-color: #000;
 }
 .header{
@@ -401,11 +401,17 @@ top: 0;
 left: 0;
 right: 0;
 }
+.tab-container{
+display: none;
+}
+.tab-container.tab-selected{
+display: none;
+}
 /*/////////////////////////////////////////////////////////////*/
-.showcase1 div{
+#showcase1 div{
 padding: 40px;
 }
-.showcase1 div p{
+#showcase1 div p{
 width: 440px;
 margin-bottom: 12px;
 }
@@ -573,10 +579,10 @@ padding-bottom: 4px;
 #showcase .scrollable{
 height: 424px!important;
 }
-.showcase1 div p{
+#showcase1 div p{
 width: 280px;
 }
-.showcase1 img:first-of-type{
+#showcase1 img:first-of-type{
     margin-left: -150px;
 }
 #showcase nav{
@@ -683,14 +689,14 @@ justify-content: center;
         <!-- showcase -->
         <div id="showcase" >
                 <h3>Showcase</h3>
-                <nav>
+                <nav class="tab-menu">
                     <a href="#" class="selected">Pulse Football</a>
                     <!--a href="#">Japanesey</a-->
                     <a href="#">Adventure Sports</a>
                     <a href="#">Kokonotori Navi</a>
                 </nav>
                 <div class="scrollable">
-                    <div class="showcase1">
+                    <div id="showcase1" class="tab-container tab-selected">
                         <img src="https://peteroper.github.io/portfolio/assets/imgs/showcase1.1.jpg" />
                     <div>
                         <h3>Football at your finger tips</h3>
@@ -703,6 +709,12 @@ justify-content: center;
                         <p class="l">text goes here</p>
                     </div>
                     <img src="https://peteroper.github.io/portfolio/assets/imgs/showcase1.3.jpg" />
+                    </div>
+                    <div id="showcase2" class="tab-container">
+                        <h4>Coming Soon</h4>
+                    </div>
+                    <div id="showcase3" class="tab-container">
+                        <h4>Coming Soon</h4>
                     </div>
                 </div>
                 <p class="web-only" style="padding-top: 24px; max-width: 724px;">My day to day work is non disclosure therefore I hope to showcase my visual design ability with some rapid ideation projects. Design processes and how I work professionally are shared within my casestudy slide deck.</p>
