--- a/index.html
+++ b/index.html
@@ -412,10 +412,10 @@ left: 0;
 right: 0;
 }
 .tab-container{
-display: none;
+display: none!important;
 }
 .tab-container.tab-selected{
-display: none;
+display: flex!important;
 }
 /*/////////////////////////////////////////////////////////////*/
 #showcase1 div{
