--- a/index.html
+++ b/index.html
@@ -188,10 +188,10 @@ background-color: #3F464C;
 background-color: #000;
 }
 #showcase1 div{
-background-color: linear-gradient(90deg, #21134E 0%, #000 100%);
+background: linear-gradient(90deg, #21134E 0%, #000 100%);
 }
 #showcase1 div.hypothesis{
-background-color: #000;
+background: #000;
 }
 .header{
 background-color: #346672;
