--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <script src="https://code.jquery.com/jquery-3.7.0.min.js" integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g=" crossorigin="anonymous"></script>
 <script>
 $( ".tab-menu a").on( "click", function() {
-    var id = $(this).attr('id');
+    var id = $(this).attr('href');
     $( ".tab-menu a").removeClass('selected');
     $(this).addClass('selected');
     $( ".tab-container").removeClass('tab-selected');
