--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 <meta property="og:image" content="https://peteroper.github.io/portfolio/assets/imgs/icon-og.jpg">
 <link rel="stylesheet" href="https://peteroper.github.io/portfolio/assets/css/core.css">
 <link rel="stylesheet" href="https://peteroper.github.io/portfolio/assets/css/styles.css">
-<script src="https://code.jquery.com/jquery-3.7.0.min.js" integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g=" crossorigin="anonymous"></script>
+<!--script src="https://code.jquery.com/jquery-3.7.0.min.js" integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g=" crossorigin="anonymous"></script-->
+<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 <script>
 $( ".tab-menu a").on( "click", function() {
     var id = $(this).attr('href');
