--- a/index.html
+++ b/index.html
@@ -725,10 +725,10 @@ justify-content: center;
                     <img src="https://peteroper.github.io/portfolio/assets/imgs/showcase1.3.jpg" />
                     </div>
                     <div id="showcase2" class="tab-container">
-                        <h4>Coming Soon</h4>
+                        <div><h4>Coming Soon</h4></div>
                     </div>
                     <div id="showcase3" class="tab-container">
-                        <h4>Coming Soon</h4>
+                        <div><h4>Coming Soon</h4></div>
                     </div>
                 </div>
                 <p class="web-only" style="padding-top: 24px; max-width: 724px;">My day to day work is non disclosure therefore I hope to showcase my visual design ability with some rapid ideation projects. Design processes and how I work professionally are shared within my casestudy slide deck.</p>
