--- a/index.html
+++ b/index.html
@@ -645,7 +645,7 @@ justify-content: center;
                     <span class="img" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/post-1.jpg);" ></span>
                     <div class="contents">
                         <div>
-                            <h4>Establishing UX Principles</h4>
+                            <h4><a href="https://peteroper.notion.site/Establishing-UX-Principles-d559d589b7364aceb43f5883ec46739e?pvs=4" title="Establishing Design Principles">Establishing UX Principles</a></h4>
                             <p>Is necessary so all heads are pointing in the same direction.</p>
                         </div>
                         <span class="icn material-icons">chevron_right</span>
