--- a/index.html
+++ b/index.html
@@ -134,7 +134,10 @@ display: inline-block;
 font-weight: normal;
 text-decoration: none;
 }
-h3 a:hover{
+a{
+text-decoration: none;
+}
+a:hover{
 text-decoration: underline;
 }
 /*/////////////////////////////////////////////////////////////*/
