--- a/index.html
+++ b/index.html
@@ -659,7 +659,7 @@ justify-content: center;
                     <span class="img" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/post-img.png);" ></span>
                     <div class="contents">
                         <div>
-                            <h4>DesignOps isn't just Systems</h4>
+                            <h4><a href="https://peteroper.notion.site/Design-Ops-isn-t-just-Systems-ac358d9719af4bb7b09a6806f7db9ebb?pvs=4" title="Design Ops isnt just systems"></a>DesignOps isn't just Systems</h4>
                             <p>Design ops lays the foundations for a strong design team.</p>
                             <!--h4>Automating a Screenflow</h4>
                             <p>With a figma screen repository creates a scalable system</p-->
@@ -672,7 +672,7 @@ justify-content: center;
                     <span class="img" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/post-img.png);" ></span>
                     <div class="contents">
                         <div>
-                            <h4>Importance of a Component Library</h4>
+                            <h4><a href="https://peteroper.notion.site/The-Importance-of-a-Component-Library-e0d344b59def4fdba7c121ba9c1219c0?pvs=4" title="The Importance of a Component Library">Importance of a Component Library</a></h4>
                             <p>Is crucial in developing a consistent app.</p>
                         </div>
                         <span class="icn material-icons">chevron_right</span>
