--- a/index.html
+++ b/index.html
@@ -659,7 +659,7 @@ justify-content: center;
                     <span class="img" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/post-img.png);" ></span>
                     <div class="contents">
                         <div>
-                            <h4><a href="https://peteroper.notion.site/Design-Ops-isn-t-just-Systems-ac358d9719af4bb7b09a6806f7db9ebb?pvs=4" title="Design Ops isnt just systems"></a>DesignOps isn't just Systems</h4>
+                            <h4><a href="https://peteroper.notion.site/Design-Ops-isn-t-just-Systems-ac358d9719af4bb7b09a6806f7db9ebb?pvs=4" title="Design Ops isnt just systems">DesignOps isn't just Systems</a></h4>
                             <p>Design ops lays the foundations for a strong design team.</p>
                             <!--h4>Automating a Screenflow</h4>
                             <p>With a figma screen repository creates a scalable system</p-->
