--- a/index.html
+++ b/index.html
@@ -742,7 +742,7 @@ justify-content: center;
     </div>
     <ul>
     <a href="#" class="img" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/social-line.jpg);">LINE</a>
-    <a href="https://www.linkedin.com/in/peter-roper" class="img" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/social-linkedin.png);">LinkedIn</a>
+    <a href="https://www.linkedin.com/in/peter-roper" target="_blank" title="linkedin profile" class="img" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/social-linkedin.png);">LinkedIn</a>
     <a href="mailto:peter.roper.jp@gmail.com" class="img" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/social-email.png);">Email</a>
     </ul>
 </div></div>
