--- a/index.html
+++ b/index.html
@@ -684,7 +684,7 @@ justify-content: center;
          
         <div id="sliders">
             <div id="slidedeck">
-              <h3>About Me <a href="https://www.figma.com/proto/Tinw42b8dPcKnoTytk0bi2/Peter-Roper-Slide-Deck?page-id=43%3A36773&type=design&node-id=43-37238&viewport=1135%2C459%2C0.25&scaling=contain&starting-point-node-id=43%3A37238&mode=design" title="Figma Casestudy" target="_blank">Figma Preview</a></h3>
+              <h3>Casestudies <a href="https://www.figma.com/proto/Tinw42b8dPcKnoTytk0bi2/Peter-Roper-Slide-Deck?page-id=43%3A36773&type=design&node-id=43-37238&viewport=1135%2C459%2C0.25&scaling=contain&starting-point-node-id=43%3A37238&mode=design" title="Figma Casestudy" target="_blank">Figma Preview</a></h3>
                 <div class="slider">
                 <ul>
                     <li><span class="img e1" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/slide1.jpg);"></span></li>
