--- a/index.html
+++ b/index.html
@@ -672,7 +672,7 @@ justify-content: center;
                     <span class="img" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/post-img.png);" ></span>
                     <div class="contents">
                         <div>
-                            <h4><a href="https://peteroper.notion.site/The-Importance-of-a-Component-Library-e0d344b59def4fdba7c121ba9c1219c0?pvs=4" title="The Importance of a Component Library" target="_blank">Importance of a Component Library</a></h4>
+                            <h4><a href="https://peteroper.notion.site/The-Importance-of-a-Design-System-e0d344b59def4fdba7c121ba9c1219c0" title="The Importance of a Design System" target="_blank">Importance of a Design System</a></h4>
                             <p>Is crucial in developing a consistent app.</p>
                         </div>
                         <span class="icn material-icons">chevron_right</span>
