--- a/index.html
+++ b/index.html
@@ -733,6 +733,17 @@ justify-content: center;
                 <p class="web-only" style="padding-top: 24px; max-width: 724px;">My day to day work is non disclosure therefore I hope to showcase my visual design ability with some rapid ideation projects. Design processes and how I work professionally are shared within my casestudy slide deck.</p>
         </div>
         <!-- showcase ends -->
+
+        <!-- resume -->
+        <div id="resume" >
+            <h3>Resume</h3>
+            <p>My resume is available in two formats: PDF and Google Doc. The PDF version incorporates design composition to enhance visual appeal, while the Google Doc format is designed with accessibility needs in mind. Please select the option that best suits your requirements.</p>
+            <nav>
+                <a href="https://peteroper.github.io/portfolio/assets/resume/peterroper-07072023.pdf" title="PDF Resume">PDF Resume</a>
+                <a href="https://peteroper.github.io/portfolio/assets/resume/peterroper-07072023.doc" title="Document Resume">Document</a>
+            </nav>
+        </div>
+        <!-- resume ends -->
 </div>  
 <!-- body end -->
 <div id="contact"><div>
