--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@ margin: 0 0 48px 0;
 .content > div:last-of-type{
 margin: 0;
 }
+#resume p,
 #sliders p,
 #contact > div p,
 #posts,
@@ -122,7 +123,7 @@ h4{ font-size: 2em; font-family: Merriweather; letter-spacing: -0.36px; }
 p.l{ font-size: 2.2em; line-height: 160%; letter-spacing: -0.48px; }
 p.m{ font-size: 1.8em; }
 p{ font-size: 1.6em; }
-#showcase nav a, .posts p{ font-size: 1.4em; line-height: 140%; letter-spacing: -0.28px; }
+#resume nav a, #showcase nav a, .posts p{ font-size: 1.4em; line-height: 140%; letter-spacing: -0.28px; }
 h4 a, p.l span{
 font-size: 1em;
 }
@@ -430,6 +431,18 @@ padding: 40px;
 .tab-container div p{
 width: 440px;
 margin-bottom: 12px;
+}
+/*/////////////////////////////////////////////////////////////*/
+/* RESUME */
+/*/////////////////////////////////////////////////////////////*/
+#resume{
+display: flex;
+gap: 16px;
+}
+#resume nav{
+display: flex;
+gap: 16px;
+flex-direction: column;
 }
 /*/////////////////////////////////////////////////////////////*/
 /* CONTACT */
