--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@ text-decoration: underline;
 /*/////////////////////////////////////////////////////////////*/
 /* COLOR */
 /*/////////////////////////////////////////////////////////////*/
-#showcase nav a,
+nav a,
 h3 a,
 #posts h4, #posts h4 a{
 color: #346672;
@@ -434,9 +434,8 @@ margin-bottom: 12px;
 /*/////////////////////////////////////////////////////////////*/
 /* RESUME */
 /*/////////////////////////////////////////////////////////////*/
-#resume{
-display: flex;
-gap: 16px;
+#resume p{
+margin-bottom: 16px;
 }
 #resume nav{
 display: flex;
