--- a/index.html
+++ b/index.html
@@ -437,10 +437,9 @@ margin-bottom: 12px;
 #resume p{
 margin-bottom: 16px;
 }
-#resume nav{
-display: flex;
-gap: 16px;
-flex-direction: column;
+#resume nav a{
+display: inline-block;
+padding: 0 16px 0 0;
 }
 /*/////////////////////////////////////////////////////////////*/
 /* CONTACT */
