--- a/index.html
+++ b/index.html
@@ -438,14 +438,16 @@ margin-bottom: 12px;
 margin-bottom: 24px;
 }
 #resume nav a{
+line-height: 24px;
 display: inline-block;
 padding: 0 16px 0 0;
 }
 #resume nav a .icn{
 width: 24px;
 height: 24px;
-display: inline-block;
-background-size: 100% auto;
+display: block;
+float: left;
+background-size: auto 100%;
 margin-right: 8px;
 }
 /*/////////////////////////////////////////////////////////////*/
