--- a/index.html
+++ b/index.html
@@ -448,6 +448,8 @@ height: 24px;
 display: block;
 float: left;
 background-size: auto 100%;
+background-repeat: no-repeat;
+background-position: 50%;
 margin-right: 8px;
 }
 /*/////////////////////////////////////////////////////////////*/
